<resources>
    <string name="app_name">CIS386_First_Android_App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="previous">Previous</string>

    <string name="hello">0</string>
    <string name="toast_button_text">Toast</string>
    <string name="random_button_text">Random</string>
    <string name="count_button_text">Count</string>
    <string name="count_down_button_text">Count Down</string>
    <string name="toast_message">Hello From Below</string>
    <string name="random_heading">Random Number: 0 -> %d.</string>
</resources>